--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <td id="cel1">cel 1</td>
         <td><img id="cel2" src="Afbeeldingen/tuin.jpg" alt=""></td>
         <td id="cel3">cel 3</td>
-        <td><img id="cel4" src="Afbeeldingen/boom2.jpg" alt=""></td>
+        <td><img id="cel4" src="Afbeeldingen/boom.jpg" alt=""></td>
         </tr>
         <tr>
         <td id="cel5">cel 5</td>
