--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <td id="cel5">cel 5</td>
         <td><img id="cel6" src="Afbeeldingen/tuin2.jpg" alt=""></td>
         <td id="cel7">cel 7</td>
-        <td><img id="cel8" src="Afbeeldingen/boom.JPG" alt=""></td>
+        <td><img id="cel8" src="Afbeeldingen/boom2.JPG" alt=""></td>
         </tr>
         <tr>
         <td id="cel9">cel 9</td>
